# minecraft-motd-cli

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: i18n.rs  main.rs  util.rs
src/protocol/: bedrock.rs  java.rs
